adapt post detail page by bootstrap

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -89,7 +89,7 @@
                     <div class="card-body">
                         <h2 class="card-title">{{ p.title }}</h2>
                         <p class="card-text">{{p.content}}</p>
-                        <a href="{{p.get_absoulte_url}}" class="btn btn-primary">Read More &rarr;</a>
+                        <a href="{{p.get_absolute_url}}" class="btn btn-primary">Read More &rarr;</a>
                     </div>
                     <div class="card-footer text-muted">
                         Posted on {{p.created_at}} by
@@ -166,7 +166,7 @@
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">
-                Copyright &copy; Do It Django A to Z 2021
+                Copyright &copy; 이충녕
             </p>
         </div>
         <!-- /.container -->
