--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,6 +9,7 @@
         <title>{{post.title}} - Blgo</title>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+        <script src="https://kit.fontawesome.com/3928d3f8fc.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Responsive navbar-->
@@ -53,7 +54,25 @@
                         {% endif %}
                         </figure>
                         <!-- Post content-->
-                        <p>{{post.content}}
+                        <p>{{post.content}}</p>
+
+                        {% if post.file_upload %}
+                        <a href="{{post.file_upload.url}}" class="btn btn-light" role="button">
+                        Download:
+                        
+                        {% if post.get_file_ext == 'csv' %}
+                        <i class="fas fa-file-csv"></i>
+                        {% elif post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls'%}
+                        <i class="fas fa-file-excel"></i>                     
+                        {% elif post.get_file_ext == 'docx' or post.get_file_ext == 'doc'%}
+                        <i class="fas fa-file-word"></i>
+                        {% else %}
+                        <i class="far fa-file"></i>
+                        {% endif %}
+                        {{ post.get_file_name }}
+                        </a>
+                        {% endif %}
+                        <hr/>
                     </article>
                     <!-- Comments section-->
                     <section class="mb-5">
