--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,7 +43,7 @@
                                 <ul>
                                     {% for category in categories %}
                                     <li>
-                                        <a href="{{category.get_absolute.url}}">{{category}} ({{category.post_set.count}})</a>
+                                        <a href="{{category.get_absolute_url}}">{{category}} ({{category.post_set.count}})</a>
                                     </li>
                                     {% endfor %}
                                     <li>
