--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -30,7 +30,15 @@
             </figure>
             <!-- Post content-->
             <p>{{post.content}}</p>
-    
+
+            {% if post.tags.exists %}
+                <i class="fas fa-tags"></i>
+                {% for tag in post.tags.iterator %}
+                    <a href="{{tag.get_absolute_url}}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
+                {% endfor %}
+                <br/><br/>
+            {% endif %}
+
             {% if post.file_upload %}
             <a href="{{post.file_upload.url}}" class="btn btn-light" role="button">
             Download:
