--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -19,7 +19,13 @@
             <a href="#">{{ post.author | upper }}</a>
             </p>
             <!-- Date/time -->
-            <p>{{post.created_at}}</p>
+            <p>{{post.created_at}}
+            <!-- Edit -->
+            {% if user.is_authenticated and user == post.author %}
+                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{post.pk}}/" role="button"><i class="fas fa-pen"></i>   Edit Post</a>
+            {% endif %}
+            </p>
+
             <!-- Preview image figure-->
             <figure class="mb-4">
             {% if post.head_image %}
