Update MD in post content

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -13,4 +13,5 @@
         <br/>
         <button type="submit" class="btn btn-primary float-right">Submit</button><br/><br/>
     </form>
+    {{ form.media }}
 {% endblock %}
