--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -35,7 +35,7 @@
             {% endif %}
             </figure>
             <!-- Post content-->
-            <p>{{post.content}}</p>
+            <p>{{post.get_content_markdown | safe }}</p>
 
             {% if post.tags.exists %}
                 <i class="fas fa-tags"></i>
