--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -14,4 +14,5 @@
         <br/>
         <button type="submit" class="btn btn-primary float-right">Submit</button><br/><br/>
     </form>
+    {{ form.media }}
 {% endblock %}
