--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,17 +1,54 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>이충녕입니다!</title>
-</head>
-<body>
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About me</a>
-</nav>
+    <head>
+        <meta charset="UTF-8">
+        <title>WiCola</title>
 
-<h1>안녕하세요. 이충녕입니다.</h1>
-<h2>대문 페이지</h2>
-<h3>아직 만들지 않음</h3>
-</body>
+        <link href="{% static 'blog/bootstrap/bootstrap.min.css'%}" rel="stylesheet" media="screen">
+        <link rel="stylesheet" href="{% static 'single_pages/css/landing.css' %}" media="screen">
+        <script src="https://kit.fontawesome.com/3928d3f8fc.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+
+        {% include 'blog/navbar.html' %}
+        <section>
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-lg-6 text-light">
+                        <h1 class="mt-5">WiCola</h1>
+                        <p>정보 통신의 최첨단 기술을 선도하는 WiCola 입니다.</p>
+                    </div>
+                    <div class="col-lg-6 mt-5">
+                        <h2 class="text-light">Blog - Recent posts</h2>
+                        <div class="card mt-1">
+                            <div class="card-body">
+                                This is some text within a card body.
+                            </div>
+                        </div>
+
+                        <div class="card mt-1">
+                            <div class="card-body">
+                                This is some text within a card body.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class='fixed-bottom'>
+        {% include 'blog/footer.html' %}
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
