mod portfolio page

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>엔지니어 이충녕입니다!</title>
-</head>
-<body>
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About me</a>
-</nav>
+    <head>
+        <meta charset="UTF-8">
+        <title>About members</title>
 
-<h1>안녕하세요. 이충녕입니다.</h1>
-<h2>이력</h2>
-<h2>Portfolio</h2>
-<h3>아직 공사중입니다</h3>
-</body>
+        <link href="{% static 'blog/bootstrap/bootstrap.min.css'%}" rel="stylesheet" media="screen">
+        <link rel="stylesheet" href="{% static 'single_pages/css/about_me.css' %}" media="screen">
+        <script src="https://kit.fontawesome.com/3928d3f8fc.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+
+        {% include 'blog/navbar.html' %}
+        <section>
+            <div class="container mt-4">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h1>안녕하세요, 카리나입니다.</h1>
+                        <br/>채워넣을 예정입니다.
+                    </div>
+                    <div class="col-lg-4">
+                        <img class="img-fluid" src="{% static 'single_pages/images/espa.jpg'%}"                        
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-light margin-for-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>PORTFOLIO</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class='fixed-bottom'>
+        {% include 'blog/footer.html' %}
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
