--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -2,7 +2,7 @@
     <footer class="py-3 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">
-                Copyright &copy; 이충녕
+                Copyright &copy; 이충녕, 최지미
             </p>
         </div>
         <!-- /.container -->
