--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -13,7 +13,7 @@
 
         {% include 'blog/navbar.html' %}
         <section>
-            <div class="container mt-4">
+            <div class="container mt-4 margin-for-footer">
                 <div class="row">
                     <div class="col-lg-8">
                         <h1>안녕하세요. 이충녕입니다.</h1>
@@ -37,8 +37,8 @@
                             </ul>
                         </p>
                     </div>
-                    <div class="col-lg-4 margin-for-footer">
-                        <img class="img-fluid" src="{% static 'single_pages/images/amsterdam_sky.jpg'%}">
+                    <div class="col-lg-4">
+                        <img class="img-fluid" src="{% static 'single_pages/images/me.jpg'%}">
                         <br/><br/>
                         <a href="https://github.com/sive2045" class="btn btn-primary btn-lg active" target='_blank' role="button" aria-pressed="true">Github</a>                   
                     </div>
