--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -3,7 +3,7 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title>C.Notebook</title>
+        <title>BugsNotebook</title>
 
         <link href="{% static 'blog/bootstrap/bootstrap.min.css'%}" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="{% static 'single_pages/css/landing.css' %}" media="screen">
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-lg-6 text-light">
-                        <h1 class="mt-5">C.Notebook</h1>
+                        <h1 class="mt-5">BugsNotebook</h1>
                         <p>제가 관심있고, 공부하는 것을 자유롭게 공유하는 곳입니다.</p>                        
                     </div>
                     <div class="col-lg-6 mt-5">
