mod landing page

--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -38,7 +38,7 @@
                         </p>
                     </div>
                     <div class="col-lg-4">
-                        <img class="img-fluid" src="{% static 'single_pages/images/me.jpg'%}">
+                        <img class="img-fluid" src="{% static 'single_pages/images/profile.jpg'%}">
                         <br/><br/>
                         <a href="https://github.com/sive2045" class="btn btn-primary btn-lg active" target='_blank' role="button" aria-pressed="true">Github</a>                   
                     </div>
