mod: base_full_width.html footer 제대로 적용되도록 수정함

--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -19,6 +19,7 @@
                {% block main_area %}
                {% endblock %}
             </div>
+        </div>
     </div>
 
     {% include 'blog/footer.html' %}
